--- a/index.html
+++ b/index.html
@@ -101,9 +101,27 @@
         </div>
         
       </section>
-      <section id="section3" class="section3">>
-            
-
+      <section id="section3" class="section3">
+        <div class="row">
+            <div class="col text-center">
+                <div class="row">
+                    <div class="col">MUSICA</div>
+                </div>
+                <div class="row">
+                    <div class="col">FOTO</div>
+                    <div class="col">SEI LA</div>
+                    <div class="col">TAL COISA</div>
+                </div>
+                <div class="row">
+                    <div class="col">JUNGLE</div>
+                </div>
+                <div class="row">
+                    <div class="col">GANKA </div>
+                    <div class="col">TOP</div>
+                    <div class="col">GG 20</div>
+                </div>
+            </div>
+        </div>
       </section>
 
       <section id="section4" class="section4">
