--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                 <br>
                 <br>
                 <div class="row">
-                    <div class="col"><img src="./img/verde.png"/>
+                    <div class="col"><img class="farol-img" src="./img/verde.png"/>
                     </div>
-                    <div class="col"><img src="./img/amarelo.png"/>
+                    <div class="col"><img class="farol-img2" src="./img/amarelo.png"/>
                     </div>
-                    <div class="col"><img src="./img/red.png"/>
+                    <div class="col"><img  class="farol-img3" src="./img/red.png"/>
                     </div>
                 
                 </div> <br>
