--- a/index.html
+++ b/index.html
@@ -5,24 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
-    <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
     <meta name="author" content="MARIVALDO TORRES JUNIOR" />
     <meta name="description" content="Hot Site da UniMatch" />
-    <meta
-      name="keywords"
-      content="Festa, Universitário, Apê do Estudante, Match, Estudante, Republica "
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <meta name="keywords"  content="Festa, Universitário, Apê do Estudante, Match, Estudante, Republica "/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script language="JavaScript" src="./JS/main.js"></script>
+    
+    <meta property=”og:image” content=”./img/capa.png” />
+    <meta property="og:image:type" content="#">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="600">
+    <meta property=”fb:app_id” content=”87741124305″ />
 
     <title>UniMatch</title>
   </head>
@@ -54,7 +49,7 @@
             <a class="nav-link" href="#section4" role="button">APOIO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" role="button">INGRESSOS</a>
+            <a class="nav-link" href="https://www.sympla.com.br/unimatch__626101" role="button">INGRESSOS</a>
           </li>
         </ul>
       </div>
@@ -66,7 +61,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col">
-                            <img src="./img/logo_unimatch.svg" alt="Logo UniMatch" />
+                            <a href="https://www.sympla.com.br/unimatch__626101"><img src="./img/logo_unimatch.svg" alt="Logo UniMatch" /></a>
                         </div>
                     </div>
                     <div class="row">
@@ -74,7 +69,7 @@
                     </div>
                     <div class="row">
                         <div class="col grow mt-5"
-                        ><a class="btn-ingresso" href="">COMPRAR INGRESSO</a></div>
+                        ><a class="btn-ingresso" href="https://www.sympla.com.br/unimatch__626101">COMPRAR INGRESSO</a></div>
                     </div>
                 </div>
             </div>  
