Atualização do site

--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <p class="sobre-text text-center">Sobre o evento sobre o evento sobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o eventosobre o evento!</p>
+                        <p class="sobre-text text-justify font-x1">A UniMatch é um evento pensado nos universitários da cidade de
+                            São Paulo que buscam pessoas para dividir um imóvel. Tanto para
+                            quem tem um local disponível em sua casa tanto quem está a
+                            procura de um. A partir de um espaço descontraído com música,
+                            jogos universitários, bebidas e comida esperamos que os
+                            participantes possam se sentir à vontade para fazer novas
+                            amizades, conversar e encontrar seu roomate perfeito.
                     </div>
                 </div>
                 <br>
