Atualização do site

--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
                 </div>
                 <br>
                 <br>
+                <br>
                 <div class="row">
-                    <div class="col "><p class="sobre-til-3 text-center">E AÍ, TÁ  UM ROOMMATE? <br>A COR DA SUA PULSEIRA VAI DIZER!</p></div>
+                    <div class="col "><p class="sobre-til-3 text-center">E AÍ, TÁ PROCURANDO UM ROOMMATE?<br>
+                        A COR DA SUA PULSEIRA VAI DIZER!</p></div>
                 </div>
                 <br>
                 <br>
