--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="col"><p class="til">29 AGO | LOCAL | 22H</p></div>
                     </div>
                     <div class="row">
-                        <div class="col grow mt-5"
+                        <div class="col grow mt-5 butt"
                         ><a class="btn-ingresso" href="https://www.sympla.com.br/unimatch__626101">COMPRAR INGRESSO</a></div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                 <br>
 
                 <div class="row">
-                    <div class="col "><img src="./img/CUP.png"/> </div>>
+                    <div class="col "><img src="./img/CUP.png"/> </div>
                     <div class="col "><img src="./img/CUP.png"/></div>
                     <div class="col "><img src="./img/CUP.png"/></div>
                 </div>
