--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <br>
                 <br>
                 <div class="row">
-                    <div class="col "><img src="./img/CUP.png"/> </div>>
+                    <div class="col "><img src="./img/CUP.png"/> </div>
                     <div class="col "><img src="./img/CUP.png"/></div>
                     <div class="col"><img src="./img/CUP.png"/></div>
                 </div>
