--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                   
                   <BR>
                   <div class="row">
-                      <div class="col apoio">NUBANK</div>
-                      <div class="col apoio">RED BULL</div>
-                      <div class="col apoio">AMSTEL</div>
-                      <div class="col apoio">ADIDAS</div>
+                      <div class="col apoio"></div>
+                      <div class="col apoio"></div>
+                      <div class="col apoio"></div>
+                      <div class="col apoio"></div>
                   </div>
               </div>
           </div>
