--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="css/main2.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico">
+    <meta name="author" content=" co-authored by MARIVALDO TORRES JUNIOR, LUCAS ROCHA" />
+    <meta name="description" content="Hot Site da UniMatch" />
+    <meta name="keywords"  content="Festa, Universitário, Apê do Estudante, Match, Estudante, Republica, UniMatch "/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script language="JavaScript" src="./JS/main.js"></script>
+    <!-- Facebook Pixel -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window,document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+       fbq('init', '2306930996241310'); 
+      fbq('track', 'PageView');
+      </script>
+      <noscript>
+       <img height="1" width="1" 
+      src="https://www.facebook.com/tr?id=2306930996241310&ev=PageView
+      &noscript=1"/>
+      </noscript>
+      <!-- End Facebook Pixel Code -->
+    <meta property=”og:image” content=”./img/capa.png” />
+    <meta property="og:image:type" content="#">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="600">
+    <meta property=”fb:app_id” content=”87741124305″ />
+    <title>UniMatch</title>
   </head>
   <body>
     <header class="nav-menu">
@@ -26,12 +57,12 @@
 
         <div>
           <p>29 AGO | LOCAL | 22H</p>
-          <a class="hero-btn">Comprar Ingresso</a>
+          <a href="https://www.sympla.com.br/unimatch__626101" class="hero-btn">Comprar Ingresso</a>
         </div>
       </div>
     </section>
 
-    <section class="section2">
+    <section class="section2" id="section2">
       <div class="container">
         <div>
           <h2>Sobre a Unimatch</h2>
@@ -51,22 +82,22 @@
           </h3>
           <ul>
             <li>
-              <img src="./img/verde.png" alt="Circulo verde" />
+              <img class="farol-img" src="./img/verde.png" alt="Circulo verde" />
               <p>EU TÔ!</p>
             </li>
             <li>
-              <img src="./img/amarelo.png" alt="Circulo amarelo" />
+              <img class="farol-img2" src="./img/amarelo.png" alt="Circulo amarelo" />
               <p>QUEM SABE?</p>
             </li>
             <li>
-              <img src="./img/red.png" alt="circulo vermelho" />
+              <img class="farol-img3" src="./img/red.png" alt="circulo vermelho" />
               <p>NEM VEM!</p>
             </li>
           </ul>
         </div>
       </div>
     </section>
-    <section class="section3">
+    <section class="section3" id="section3">
       <div>
         <p>MÚSICA</p>
         <ul>
@@ -102,7 +133,7 @@
         </ul>
       </div>
     </section>
-    <section class="section4">
+    <section class="section4" id="section4">
       <div>
         <h2>INGRESSOS</h2>
         <div id="sympla-widget-626101" height="auto"></div>
