ajuste em relacao ao evento

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>UniMatch</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
     <meta
@@ -80,7 +80,7 @@
     </header>
     <section class="hero">
       <div class="container">
-        <img src="img/logo_unimatch.svg" alt="Logo" />
+        <img src="img/logo_unimatch.png" alt="Logo" />
 
         <div>
           <p>29 AGO | LOCAL | 22H</p>
@@ -100,80 +100,55 @@
         <div>
           <h2>Sobre a Unimatch</h2>
           <p>
-            A UniMatch é um evento pensado nos universitários da cidade de São
-            Paulo que buscam pessoas para dividir um imóvel. Tanto para quem tem
-            um local disponível em sua casa tanto quem está a procura de um. A
-            partir de um espaço descontraído com música, jogos universitários,
-            bebidas e comida esperamos que os participantes possam se sentir à
-            vontade para fazer novas amizades, conversar e encontrar seu roomate
-            perfeito.
+            A UniMatch é um evendo pensado nos universitários da cidade de São
+            Paulo que buscam pessoas pra dividar um imóvel. Tanto para quem tem
+            um local disponível em seu imóvel tanto quem está a procura de um. A
+            partir de um espaço decontraído com música, jogos universitários,
+            bebidas e comida esperamos que os participantes posssam se sentir a
+            vontade para fazer novas amizades, conversar e encontrar seu
+            roommate perfeito. Se você está a procura do “Roomie” perfeito e tem
+            um quarto sobrando no seu apê, chegou o dia de fazer aquela faxina
+            no quarto pro seu novo roommate se acomodar! Ou então se você está
+            procurando alguém para dividir um espaço, ou quer encontrar alguém
+            que já tenha um, pode fazer as malas e partir pra mudança! E se você
+            já tem seu cafofo e está feliz com ele pode vir também!! Novas
+            conexões são sempre bem vindas, não é mesmo!
           </p>
-        </div>
-        <div>
-          <h3>
-            E AÍ, TÁ PROCURANDO UM ROOMMATE? A COR DA SUA PULSEIRA VAI DIZER!
-          </h3>
-          <ul>
-            <li>
-              <img
-                class="farol-img"
-                src="./img/verde.png"
-                alt="Circulo verde"
-              />
-              <p>EU TÔ!</p>
-            </li>
-            <li>
-              <img
-                class="farol-img2"
-                src="./img/amarelo.png"
-                alt="Circulo amarelo"
-              />
-              <p>QUEM SABE?</p>
-            </li>
-            <li>
-              <img
-                class="farol-img3"
-                src="./img/red.png"
-                alt="circulo vermelho"
-              />
-              <p>NEM VEM!</p>
-            </li>
-          </ul>
         </div>
       </div>
     </section>
     <section class="section3" id="section3">
       <div>
-        <p>MÚSICA</p>
+        <p>ACONTECE</p>
         <ul>
           <li>
-            <img src="./img/6-layers.png" alt="" />
-            <p>POP</p>
+            <img src="./img/icon_mic.svg" alt="" />
+            <p>MÚSICA AO VIVO</p>
           </li>
           <li>
-            <img src="./img/6-layers.png" alt="" />
-            <p>ELETRÔNICA</p>
+            <img src="./img/icon_cup.svg" alt="" />
+            <p>JOGOS</p>
           </li>
           <li>
-            <img src="./img/6-layers.png" alt="" />
-            <p>ROCK</p>
+            <img src="./img/icon_networking.svg" alt="" />
+            <p>NETWORKING</p>
           </li>
         </ul>
       </div>
       <div>
-        <p>JOGOS</p>
+        <p>APOIO</p>
         <ul>
           <li>
-            <img src="./img/6-layers.png" alt="" />
-            <p>BEER PONG</p>
+            <img src="./img/icon_guni.svg" alt="" />
+            <p>GUNI</p>
           </li>
           <li>
-            <img src="./img/6-layers.png" alt="" />
-            <p>UNO</p>
+            <img src="./img/icon_quetal.svg" alt="" />
+            <p>QUE TAL</p>
           </li>
           <li>
-            <img src="./img/6-layers.png" alt="" />
-            <p>KARAOKÊ</p>
+            <img src="./img/icon_frkcat.svg" alt="" />
+            <p>FREAK CATT</p>
           </li>
         </ul>
       </div>
