ajuste do local

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <img src="img/logo_unimatch.png" alt="Logo" />
 
         <div>
-          <p>29 AGO | LOCAL | 22H</p>
+          <p>29 AGO | HOSTEL QUE TAL | 22H</p>
           <a
             href="https://www.sympla.com.br/unimatch__626101"
             class="hero-btn"
