--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
         <div>
           <p>29 AGO | BAR QUE TAL | 22H</p>
+          <p>R. Vergueiro, 3393 - Vila Mariana</p>
           <a
             href="https://www.sympla.com.br/unimatch__626101"
             class="hero-btn"
