ajuste de gramatica

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div>
           <h2>Sobre a Unimatch</h2>
           <p>
-            A UniMatch é um evendo pensado nos universitários da cidade de São
+            A UniMatch é um evento pensado nos universitários da cidade de São
             Paulo que buscam pessoas pra dividar um imóvel. Tanto para quem tem
             um local disponível em seu imóvel tanto quem está a procura de um. A
             partir de um espaço decontraído com música, jogos universitários,
